[package]
name = "mcseedcracker"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
cubiomes = "0.3.3"
ratatui = "0.29.0"
rayon = "1.10.0"
uint = "0.10.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
indicatif = "0.18.0"

[[bench]]
name = "seed_reverse_from_pillars_and_buried_treasure"
harness = false

[[bench]]
name = "pillar_seed_reverse"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
